--- a/static/css/app.css
+++ b/static/css/app.css
@@ -1,10 +1,22 @@
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
   font-size: 14px;
-  line-height: 1.5;
+  line-height: 1.5; 
+  background-color: green; 
 }
 
 .container {
   max-width: 960px;
   margin: 0 auto;
+}
+ 
+h1{
+  font-family: Verdana; 
+  font-style: oblique; 
+  color: blue;  
+  border-bottom-width: medium; 
+}
+
+p{ 
+  color: gray;
 }
